# polonet

./: .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  run.py
.github/workflows/: python-app.yml
app/: __init__.py  forms.py  main.py  models.py
app/auth/: forms.py  models.py  views.py
app/auth/templates/auth/: login.html  sign_up.html
app/core/: config.yaml  core.py  exceptions.py  go.py  helpers.py  main_functions.py  output.py  tasks.py
app/core/inventory/: groups.yaml
app/core/models/: bootstrap.py  device.py  filter.py  menu.py  platform.py  result.py  template.py
app/core/templates/ios/: reset_tunnel_script.j2  set_ip_domain.j2
app/device/: views.py
app/device/templates/device/: devices.html
app/inventory/: forms.py  models.py  schemas.py  views.py
app/inventory/templates/inventory/: filter.html  home.html  inventories.html  inventory.html  menu.html
app/job/: helper.py  models.py  schemas.py  views.py
app/job/templates/job/: result.html  tasks.html
app/static/: index.js  main.css
app/templates/: 404.html  base.html
app/website/: __init__.py  auth.py  forms.py  models.py  views.py
app/website/static/: index.js
app/website/templates/: sign_up.html
migrations/versions/: a25f324a9045_seed.py
tests/: config_test.py  conftest.py  test_auth.py  test_bootstrap.py  test_device.py  test_factory.py
tests/core/: test_bootstrap.py  test_device.py
tests/core/static/: inventory_ok.csv
tests/functional/: test_home.py  test_inventory.py  test_log_in.py  test_sign_up.py
tests/unit/: test_models.py
